<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Shualeduri</string>
    <string name="cart">Cart</string>
    <string name="start_shopping">Start Shopping</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="my_cart">My Cart</string>
    <string name="place_order">Place Order</string>
    <string name="payment_successful">Payment Successful!</string>
    <string name="done">DONE</string>
    <string name="oil">Oil</string>
    <string name="product_description">This Product Is Very Impotant And Most Seller</string>
    <string name="subtotal">Subtotal (%1$d items)</string>
    <string name="total">Total</string>
    <string name="offers">Offers</string>
    <string name="official_store">offical store</string>
    <string name="free_delivery">free delivery</string>
</resources>

